[gd_scene load_steps=6 format=2]

[ext_resource path="res://Dungeon Tester.gd" type="Script" id=1]
[ext_resource path="res://Map_Generation.gd" type="Script" id=2]
[ext_resource path="res://ui/PixelFJVerdana12pt.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Dungeon Tester" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.3, 0.3 )

[node name="Button" type="Button" parent="."]
margin_left = 59.0
margin_top = -89.5
margin_right = 151.0
margin_bottom = -60.5
custom_fonts/font = SubResource( 1 )
text = "generate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 59.75
margin_top = -60.25
margin_right = 83.75
margin_bottom = -31.25
custom_fonts/font = SubResource( 1 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 126.5
margin_top = -58.75
margin_right = 150.5
margin_bottom = -29.75
custom_fonts/font = SubResource( 1 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapNode" type="Node2D" parent="."]

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 90.5
margin_top = -62.75
margin_right = 124.5
margin_bottom = -24.75
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
